Add safe String hashing with unsafe opt-in